--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,9 +13,11 @@
         android:theme="@style/Theme.Kulitku"
         tools:targetApi="31">
         <activity
+            android:name=".ui.splash.SliderActivity"
+            android:exported="false" />
+        <activity
             android:name=".ui.home.HomeActivity"
-            android:exported="false">
-        </activity>
+            android:exported="false"></activity>
         <activity
             android:name=".ui.splash.SplashActivity"
             android:exported="true">
