--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,20 +4,15 @@
 
     <application
         android:allowBackup="true"
-        android:dataExtractionRules="@xml/data_extraction_rules"
-        android:fullBackupContent="@xml/backup_rules"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.Kulitku"
+        android:theme="@style/Theme.KulitKu"
         tools:targetApi="31">
         <activity
             android:name=".ui.splash.SliderActivity"
             android:exported="false" />
-        <activity
-            android:name=".ui.home.HomeActivity"
-            android:exported="false"></activity>
         <activity
             android:name=".ui.splash.SplashActivity"
             android:exported="true">
@@ -27,6 +22,15 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity
+            android:name=".ui.scan.AddPhotoActivity"
+            android:exported="false" />
+        <activity
+            android:name=".ui.home.BottomNavigationActivity"
+            android:exported="false" />
+        <activity
+            android:name=".ui.home.HomeActivity"
+            android:exported="true"/>
     </application>
 
 </manifest>
