--- a/app/build.gradle
+++ b/app/build.gradle
@@ -59,6 +59,7 @@ dependencies {
 
 
     implementation 'com.github.bumptech.glide:glide:4.13.0'
+    implementation 'id.zelory:compressor:3.0.1'
     implementation 'com.google.android.material:material:1.6.1'
     implementation 'com.google.firebase:firebase-auth-ktx:21.0.8'
 
