feat: detail recommendation and suggestion

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -39,7 +39,7 @@
                 android:value="" />
         </activity>
         <activity
-            android:name=".ui.scan.ScanResultActivity"
+            android:name=".ui.scan.result.ScanResultActivity"
             android:exported="false">
             <meta-data
                 android:name="android.app.lib_name"
